# pipecat-dictation

./: .gitignore  CLAUDE.md  README.md  bot-gpt5.py  bot-realtime-api.py  bot.py  khk-notes.txt  pipecat_window_functions.py  prompt-gpt5.txt  prompt-realtime-api.txt  pyproject.toml  tui.py  tui_demo.py  tui_dictation.py  window_control.py
macos/: libvpio.dylib  local_mac_transport.py  local_vpio_transport.py  vpio_helper.c
tui/core/: base_app.py
tui/core/services/: bot_runner.py  transport_manager.py
tui/core/utils/: clipboard.py  imports.py  json_render.py
tui/widgets/: input_bar.py  mixins.py  rtvi_list_panel.py  syslog_panel.py  text_list_panel.py
